--- a/1/main.css
+++ b/1/main.css
@@ -1,11 +1,12 @@
-body {
-    display: flex;
-    background-color: black;
-    margin: 0px;
-    padding: 0px;
-    color: white;
-    height: 100vh;
-    justify-content: center;
-    align-items: center
-}
- 
+    body {
+        display: flex;
+        background-color: black;
+        margin: 0px;
+        padding: 0px;
+        color: white;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+    }
+    
